<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weekly_forecast">Your Weekly Forecast</string>
    <string name="date_placeholder">Date</string>
    <string name="min_temp_placeholder">min</string>
    <string name="max_temp_placeholder">max</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="pressure_format_string">%s hPa</string>
    <string name="humidity_format_string">%s %%</string>
    <string name="error_network">Network Error</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="san_jose">San Jose, CA</string>
</resources>