<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_forecast_day"
        style="@style/ForecastItemDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/date_placeholder" />

    <TextView
        android:id="@+id/tv_min_temp"
        style="@style/ForecastItemMinTempStyle"
        tools:text="@string/min_temp_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_max_temp"
        style="@style/ForecastItemMaxTempStyle"
        android:layout_marginEnd="8dp"
        tools:text="@string/max_temp_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_min_temp"/>

</androidx.constraintlayout.widget.ConstraintLayout>