<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/ScreenTitle"
        tools:text="@string/date_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvSunrise"
        style="@style/ForecastParameterStyle"
        android:text="@string/sunrise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <TextView
        android:id="@+id/tvSunriseTime"
        style="@style/ForecastParameterStyle"
        tools:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <TextView
        android:id="@+id/tvSunset"
        style="@style/ForecastParameterStyle"
        android:text="@string/sunset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSunrise"/>

    <TextView
        android:id="@+id/tvSunsetTime"
        style="@style/ForecastParameterStyle"
        tools:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSunrise"/>

    <TextView
        android:id="@+id/tvPressure"
        style="@style/ForecastParameterStyle"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSunset"/>

    <TextView
        android:id="@+id/tvPressureValue"
        style="@style/ForecastParameterStyle"
        tools:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSunset"/>

    <TextView
        android:id="@+id/tvHumidity"
        style="@style/ForecastParameterStyle"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPressure"/>

    <TextView
        android:id="@+id/tvHumidityValue"
        style="@style/ForecastParameterStyle"
        tools:text="@string/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPressure"/>

</androidx.constraintlayout.widget.ConstraintLayout>